--- a/server/nestjs/product/package.json
+++ b/server/nestjs/product/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "joi": "^17.13.3",
     "mongoose": "^8.6.3",
     "reflect-metadata": "^0.2.0",
