feat(auth): adding reset pw, change pw, verify user

--- a/server/nestjs/gateway/tsconfig.json
+++ b/server/nestjs/gateway/tsconfig.json
@@ -35,6 +35,12 @@
       ],
       "@libs/order/*": [
         "libs/order/src/*"
+      ],
+      "@libs/queue": [
+        "libs/queue/src"
+      ],
+      "@libs/queue/*": [
+        "libs/queue/src/*"
       ]
     }
   }
