--- a/server/nestjs/gateway/docker-compose.yml
+++ b/server/nestjs/gateway/docker-compose.yml
@@ -21,6 +21,18 @@ services:
     volumes:
       - ./docker/rabbitmq_data:/var/lib/rabbitmq
 
+  redis:
+    image: redis:6.2.5-alpine
+    restart: 'always'
+    container_name: lms_redis
+    ports:
+      - ${REDIS_PORT}:6379
+    env_file:
+      - .env
+    command: redis-server /usr/local/etc/redis/redis.conf --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - ./docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
+
 #  elasticsearch:
 #    image: docker.elastic.co/elasticsearch/elasticsearch:${ES_VERSION}
 #    container_name: lms_elastic_search
