--- a/server/nestjs/gateway/package.json
+++ b/server/nestjs/gateway/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.15.0",
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/bullmq": "^10.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -37,11 +39,13 @@
     "amqplib": "^0.10.4",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.23.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
     "log4js": "^6.9.1",
     "mongoose": "^8.7.0",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.0",
@@ -58,6 +62,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -100,7 +105,8 @@
       "^@libs/searching(|/.*)$": "<rootDir>/libs/searching/src/$1",
       "^@libs/rating(|/.*)$": "<rootDir>/libs/rating/src/$1",
       "^@lib/cart(|/.*)$": "<rootDir>/libs/cart/src/$1",
-      "^@lib/order(|/.*)$": "<rootDir>/libs/order/src/$1"
+      "^@lib/order(|/.*)$": "<rootDir>/libs/order/src/$1",
+      "^@queue/queue(|/.*)$": "<rootDir>/libs/queue/src/$1"
     }
   }
 }
