feat(order): handling order and filter

--- a/server/nestjs/gateway/package.json
+++ b/server/nestjs/gateway/package.json
@@ -33,8 +33,10 @@
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.7",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.4.7",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
     "axios": "^1.7.7",
@@ -44,6 +46,7 @@
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
     "log4js": "^6.9.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.0",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
