--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,15 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
     "bullmq": "^5.23.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-simple-star-rating": "^5.1.7",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
