--- a/server/nestjs/gateway/libs/order/tsconfig.lib.json
+++ b/server/nestjs/gateway/libs/order/tsconfig.lib.json
@@ -4,6 +4,13 @@
     "declaration": true,
     "outDir": "../../dist/libs/order"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test",
+    "**/*spec.ts"
+  ]
 }
