--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^6.26.2",
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^10.0.6",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
