feat(redis): add redis cache to product

--- a/server/nestjs/gateway/tsconfig.json
+++ b/server/nestjs/gateway/tsconfig.json
@@ -41,6 +41,12 @@
       ],
       "@libs/queue/*": [
         "libs/queue/src/*"
+      ],
+      "@libs/cache": [
+        "libs/cache/src"
+      ],
+      "@libs/cache/*": [
+        "libs/cache/src/*"
       ]
     }
   }
