--- a/server/nestjs/gateway/package.json
+++ b/server/nestjs/gateway/package.json
@@ -23,6 +23,7 @@
     "@elastic/elasticsearch": "^8.15.0",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/bullmq": "^10.2.2",
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -42,6 +43,8 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.23.0",
+    "cache-manager": "3.6",
+    "cache-manager-redis-store": "2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "joi": "^17.13.3",
@@ -64,6 +67,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -111,7 +115,8 @@
       "^@libs/rating(|/.*)$": "<rootDir>/libs/rating/src/$1",
       "^@lib/cart(|/.*)$": "<rootDir>/libs/cart/src/$1",
       "^@lib/order(|/.*)$": "<rootDir>/libs/order/src/$1",
-      "^@queue/queue(|/.*)$": "<rootDir>/libs/queue/src/$1"
+      "^@queue/queue(|/.*)$": "<rootDir>/libs/queue/src/$1",
+      "^@app/cache(|/.*)$": "<rootDir>/libs/cache/src/$1"
     }
   }
 }
