--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
     "bullmq": "^5.23.0",
+    "chart.js": "^4.4.6",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
