--- a/server/nestjs/gateway/package.json
+++ b/server/nestjs/gateway/package.json
@@ -52,6 +52,7 @@
     "log4js": "^6.9.1",
     "moment": "^2.30.1",
     "mongoose": "^8.7.0",
+    "nestjs-vnpay": "^0.1.0",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -60,7 +61,8 @@
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
     "typeorm": "^0.3.20",
-    "uuid": "^11.0.2"
+    "uuid": "^11.0.2",
+    "vnpay": "^1.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
