feat(order): adding momo payment

--- a/server/nestjs/gateway/libs/order/tsconfig.lib.json
+++ b/server/nestjs/gateway/libs/order/tsconfig.lib.json
@@ -2,7 +2,10 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "outDir": "../../dist/libs/order"
+    "outDir": "../../dist/libs/order",
+    "types": [
+      "node"
+    ]
   },
   "include": [
     "src/**/*"
