--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.59.19",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "bullmq": "^5.23.0",
     "chart.js": "^4.4.6",
     "moment": "^2.30.1",
@@ -27,6 +28,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-simple-star-rating": "^5.1.7",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.6",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.0.3"
