--- a/server/nestjs/gateway/package.json
+++ b/server/nestjs/gateway/package.json
@@ -72,6 +72,7 @@
     "@types/cache-manager-redis-store": "^2.0.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.10.1",
     "@types/nodemailer": "^6.4.16",
     "@types/passport-jwt": "^4.0.1",
